Adding textured cube to WebGL 2

--- a/08_webgl/webgl/rotating_cube.html
+++ b/08_webgl/webgl/rotating_cube.html
@@ -4,6 +4,7 @@
       <canvas width = "600" height = "600" id = "webglCanvas"></canvas>
 
       <script src="gl-matrix.js"></script>
+      <script src="utils.js"></script>
       <script src="rotating_cube.js"></script>
    </body>
 </html>
